--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Haris
 middle_name:
 last_name: Riaz
-email: hriaz@arizona.edu
+# email: hriaz@arizona.edu
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  The best way to reach me is via email or a ping on Twitter/X :)
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
@@ -43,7 +43,7 @@ repo_trophies:
 # will use title and url fields
 # Take a look to https://github.com/jekyll/jekyll-feed for more customization
 
-rss_icon: true
+rss_icon: false
 
 # -----------------------------------------------------------------------------
 # Layout
